--- a/package.json
+++ b/package.json
@@ -1,16 +1,49 @@
 {
   "name": "mysite",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
+    "dev": "vite",
+    "eslint": "eslint",
+    "lint": "lint-staged",
+    "lint:prettier": "pretty-quick --verbose",
+    "prepare": "husky install",
     "preview": "vite preview"
   },
+  "lint-staged": {
+    "src/**/*.{js,ts,tsx,md,html,less,css,json,vue}": "prettier --write",
+    "src/**/*.{ts,tsx,vue}": "eslint --fix",
+    "{!(package)*.json,*.code-snippets,.!(browserslist)*rc}": [
+      "prettier --write--parser json"
+    ],
+    "locales/*.yml": [
+      "prettier --write"
+    ],
+    "package.json": [
+      "prettier --write"
+    ],
+    "*.md": [
+      "prettier --write"
+    ]
+  },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@vueuse/core": "^8.4.2",
+    "eslint": "^8.19.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.2.0",
+    "husky": "^8.0.1",
+    "import": "^0.0.6",
     "less": "^4.1.2",
+    "lint-staged": "^13.0.3",
     "postcss-import": "^14.1.0",
+    "prettier": "^2.7.1",
+    "prettier-eslint": "^15.0.1",
+    "prettier-plugin-packagejson": "^2.2.18",
+    "pretty-quick": "^3.1.3",
     "unplugin-auto-import": "^0.7.1",
     "unplugin-vue-components": "^0.19.5",
     "vue": "^3.2.25",
